# block-event-read

./: Cargo.toml  Makefile.toml
src/: main.rs
src/event_read/: abi.json  event.rs  mod.rs
src/redis/: redis_connection.rs
